17th commit: fix more bugs

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -103,21 +103,29 @@
                                         <a id="Close Contact" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
                                             Close Contact
                                         </a>
-                                        <a id="Current In Hubei/Wenzhou" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
-                                            Current In Hubei/Wenzhou
+                                        <a id="Had Contact" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Had Contact
                                         </a>
-                                        <a id="Been in Hubei/Wenzhou" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
-                                            Been in Hubei/Wenzhou
+                                        <a id="Current In Hubei/Oversea" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Current In Hubei/Oversea
                                         </a>
-                                        <a id="Back from Hubei/Wenzhou" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
-                                            Back from Hubei/Wenzhou
+                                        <a id="Been in Hubei/Oversea" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Been in Hubei/Oversea
                                         </a>
-                                        <a id="Travel Today" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
-                                            Travel Today
+<!--
+                                        <a id="Back from Hubei/Oversea" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Back from Hubei/Oversea
                                         </a>
-                                        <a id="Risky Location" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
-                                            Risky Location
+-->
+                                        <a id="Staff Travel" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Staff Travel
                                         </a>
+                                        <a id="Close to Risky Location" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Close to Risky Location
+                                        </a>
+                                        <a id="Outside GZ/FS" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Outside GZ/FS
+                                        </a>                                   
                                     </div>
                                 </li>
 
