--- a/html/navigation.html
+++ b/html/navigation.html
@@ -63,10 +63,10 @@
                              <a id="myInvestHI" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=healthcase" target="viewpage">Health Issue<span class="badge badge-primary badge-nav" id='healthcase'></span></a>
                              <a id="myInvestCC" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=closecontact" target="viewpage">Close Contact<span class="badge badge-primary badge-nav" id='closecontact'></span></a>
                              <a id="myInvestHC" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=hadcontact" target="viewpage">Had Contact<span class="badge badge-primary badge-nav" id='hadcontact'></span></a>
-                             <a id="myInvestIHW" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=curinhubei" target="viewpage">Current in Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='curinhubei'></span></a>
-                             <a id="myInvestBHW" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=beenhubei" target="viewpage">Been in Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='beenhubei'></span></a>
-                             <a id="myInvestBAK"class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=backhubei" target="viewpage">Back from Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='backhubei'></span></a>
-
+                             <a id="myInvestIHW" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=curinhubei" target="viewpage">Current in Hubei/Oversea<span class="badge badge-primary badge-nav" id='curinhubei'></span></a>
+                             <a id="myInvestBHW" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=beenhubei" target="viewpage">Been in Hubei/Oversea<span class="badge badge-primary badge-nav" id='beenhubei'></span></a>
+<!--                             <a id="myInvestBAK" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=backhubei" target="viewpage">Back from Hubei/Oversea<span class="badge badge-primary badge-nav" id='backhubei'></span></a>-->
+                             <a id="myInvestOUT" class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=outsidework" target="viewpage">Outside GZ/FS<span class="badge badge-primary badge-nav" id='outsidework'></span></a>
                              <h6 class="collapse-header">My Submission</h6>
                              <a class="collapse-item" href="informap.html?viewtype=myInvestigation&viewvalue=viewcompletecase" target="viewpage">View Submitted Cases</a>
                          </div>
@@ -83,10 +83,11 @@
                              <a id="myMonitoHI" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Health Issue" target="viewpage">Health Issue<span class="badge badge-primary badge-nav" id='monitorhealthcase'></span></a>
                              <a id="myMonitoCC" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Close Contact" target="viewpage">Close Contact<span class="badge badge-primary badge-nav" id='monitorclosecontact'></span></a>
                              <a id="myMonitoHC" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Had Contact" target="viewpage">Had Contact<span class="badge badge-primary badge-nav" id='monitorhadcontact'></span></a>
-                             <a id="myMonitoIHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Current in Hubei/Wenzhou" target="viewpage">Current in Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='monitorcurinhubei'></span></a>
-                             <a id="myMonitoBHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Been in Hubei/Wenzhou" target="viewpage">Been in Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='monitorbeenhubei'></span></a>
-                             <a id="myMonitoBAK" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Back from Hubei/Wenzhou" target="viewpage">Back from Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='monitorbackhubei'></span></a>
+                             <a id="myMonitoIHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Current in Hubei/Oversea" target="viewpage">Current in Hubei/Oversea<span class="badge badge-primary badge-nav" id='monitorcurinhubei'></span></a>
+                             <a id="myMonitoBHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Been in Hubei/Oversea" target="viewpage">Been in Hubei/Oversea<span class="badge badge-primary badge-nav" id='monitorbeenhubei'></span></a>
+<!--                             <a id="myMonitoBAK" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Back from Hubei/Oversea" target="viewpage">Back from Hubei/Oversea<span class="badge badge-primary badge-nav" id='monitorbackhubei'></span></a>-->
                              <a id="myMonitoST" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Staff Travel" target="viewpage">Staff Travel<span class="badge badge-primary badge-nav" id='monitorstafftravel'></span></a>
+                             <a id="myMonitorOut" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Outside GZ or FS" target="viewpage">Outside GZ/FS<span class="badge badge-primary badge-nav" id='monitoroutgzfs'></span></a>                             
                              <a id="myMonitoCR" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Close to Risky Location" target="viewpage">Close to Risky Location<span class="badge badge-primary badge-nav" id='monitorclose2risky'></span></a>
                          </div>
                      </div>
