18th commit: further fix more bugs

--- a/html/informap.html
+++ b/html/informap.html
@@ -311,10 +311,10 @@
                     <select id="outsideworkResult" class="form-control result-sel" name="result">
                         <option value=null style="display: none"></option>
                         <option value=2>Wrong survey input: Currently in Guangzhou or Fushan</option>
-                        <option value=1>Confirmed currently outside Guangzhou and Fushan</option>
+                        <option value=4>Confirmed currently outside Guangzhou and Fushan</option>
                     </select>
                 </div>
-                <div class="form-group" style="display: none">
+                <div class="form-group">
                     <label for="outsideworkNotes" class="notes" >Notes</label>
                     <textarea id="outsideworkNotes" name="submitternotes" class="form-control note-field" rows="3" placeholder="">Confirmed currently outside Guangzhou and Fushan</textarea>
                 </div>
