20th commit: new case type: health code included

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -58,7 +58,7 @@
                                         <h1><strong id="confirmedInfection"></strong></h1>
                                     </div>
                                     <div>
-                                        <p class="small kpi-label">Confirmed / Suspected nCoV</p>
+                                        <p class="small kpi-label">Confirmed / Suspected COVID-19</p>
                                     </div>
                                 </div>
                                 <div class="col-md-3 kpi" id='KPI2 UnderRisk'>
@@ -100,6 +100,10 @@
                                             All Staff
                                         </a>
                                         <div class="dropdown-divider"></div>
+                                        
+                                        <a id="Red or No Health Code" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
+                                            Red or No Health Code
+                                        </a>                                      
                                         <a id="Close Contact" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
                                             Close Contact
                                         </a>
@@ -124,7 +128,7 @@
                                             Close to Risky Location
                                         </a>
                                         <a id="Outside GZ/FS" class="dropdown-item" href="javascript:void(0)" onclick="selMap(this.id)">
-                                            Outside GZ/FS
+                                            Outside GD
                                         </a>                                   
                                     </div>
                                 </li>
