--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 //            username = user_json.name;
 //            backupname = user_json.backupName;
     
-//            if (backupflag.length >5) {
+//            if (backupname.length >5) {
 //                backupflag = 0;
 //            } else {
 //                backupflag = 1;
